/**
* Interface for all Class that should nofity User
* @author Maher Athar Ilyas 
* @version 
*/
public interface Notification {

    void notifyUser(User user);
}